--- a/style.css
+++ b/style.css
@@ -3,6 +3,34 @@ html, body {
     padding: 0;
 }
 
+
+
+.container {
+    display: flex;
+    padding: 0 15%;
+    padding-top: 5%;
+}
+
+#formWrapper > h1 {
+    text-align: center;
+}
+
+#instructions {
+    padding: 5% 20% 0 20%;
+}
+
+#urlInput {
+    text-align: center;
+}
+
+#urlInput > p {
+    text-align: center;
+    padding: 10px 0;
+}
+
+
+
+/*DRAGGABLE DIV START*/
 #mydiv {
     position: absolute;
     z-index: 9;
@@ -12,11 +40,6 @@ html, body {
     
 }
 
-.controller-iframe {
-    height: 460px;
-}
-
-
 #mydivheader {
     padding: 10px;
     cursor: move;
@@ -24,11 +47,22 @@ html, body {
     background-color: #2196F3;
     color: #fff;
 }
+/*DRAGGABLE DIV END*/
+
+
+/*IFRAMES START*/
+.controller-iframe {
+    height: 460px;
+}
 
 .vmix {
     width: 100%;
     height: 100vh;
 }
+/*IFRAMES END*/
+
+
+
 
 
 @media (max-width: 1920px) {
