--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ html, body {
     background-color: #f1f1f1;
     border: 1px solid #d3d3d3;
     text-align: center;
-    
 }
 
 #mydivheader {
@@ -57,11 +56,18 @@ html, body {
 
 .vmix {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 /*IFRAMES END*/
 
 
+
+
+@media (max-width: 3000px) {
+    #mydiv {
+        transform: scale(1.3);
+    }
+}
 
 
 
