--- a/style.css
+++ b/style.css
@@ -63,22 +63,29 @@ html, body {
 
 
 
+
+
+
 @media (min-width: 3000px) {
     #mydiv {
         transform: scale(1.3);
     }
 }
 
-
+@media (max-width: 2600px) {
+    #mydiv {
+        transform: scale(1);
+    }
+}
 
 @media (max-width: 1920px) {
     #mydiv {
-        transform: scale(0.6);
+        transform: scale(0.7);
     }
 }
 
 @media (max-width: 770px) {
     #mydiv {
-        transform: scale(0.2);
+        transform: scale(0.3);
     }
 }
